# Universal_Robots_ROS2_Tutorials

./: .pre-commit-config.yaml  LICENSE  README.md  conf.py  tutorial_index.rst
.github/workflows/: humble-binary-main.yml  humble-binary-testing.yml  rolling-binary-main.yml  rolling-binary-testing.yml  sphinx.yml
full_husky/full_husky_control/: CMakeLists.txt  package.xml
full_husky/full_husky_control/config/: my_robot_calibration.yaml  ros2_controllers.yaml
full_husky/full_husky_control/launch/: rsp.launch.py  start_robot.launch.py
full_husky/full_husky_control/src/: static_state_publisher.cpp
full_husky/full_husky_control/urdf/: full_husky_controlled.urdf.xacro
full_husky/full_husky_description/: CMakeLists.txt  package.xml
full_husky/full_husky_description/launch/: view_robot.launch.py
full_husky/full_husky_description/rviz/: urdf.rviz
full_husky/full_husky_description/urdf/: decorations.urdf.xacro  full_husky.urdf.xacro  full_husky_macro.xacro  husky.urdf.xacro  wheel.urdf.xacro
full_husky/full_husky_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
full_husky/full_husky_moveit_config/config/: full_husky.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
full_husky/full_husky_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
full_husky/robotiq_2f_140_gripper_visualization/: CMakeLists.txt  package.xml
my_dual_robot_cell/doc/: assemble_urdf.rst  build_moveit_config.rst  conf.py  index.rst  start_ur_driver.rst
my_dual_robot_cell/my_dual_robot_cell_control/: CMakeLists.txt  LICENSE  package.xml
my_dual_robot_cell/my_dual_robot_cell_control/config/: alice_calibration.yaml  bob_calibration.yaml  combined_controllers.yaml  ros2_controllers.yaml
my_dual_robot_cell/my_dual_robot_cell_description/: CMakeLists.txt  package.xml
my_dual_robot_cell/my_dual_robot_cell_description/launch/: view_robot.launch.py
my_dual_robot_cell/my_dual_robot_cell_description/rviz/: urdf.rviz
my_dual_robot_cell/my_dual_robot_cell_description/urdf/: my_dual_robot_cell.urdf.xacro  my_dual_robot_cell_macro.xacro
my_dual_robot_cell/my_dual_robot_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_robot_cell/doc/: assemble_urdf.rst  build_moveit_config.rst  conf.py  index.rst  start_ur_driver.rst
my_robot_cell/my_robot_cell_control/: CMakeLists.txt  package.xml
my_robot_cell/my_robot_cell_description/: CMakeLists.txt
my_robot_cell/my_robot_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+30 files in other folders)
